2023-09-02  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix from M. Holger: allow fix-qdf to read from pipe. Fixes #1010.

        * Bug fix: maintain links to foreign pages when copying foreign
        objects. This corrects a possible crash.

        * Add /MediaBox to a page if absent. Thanks M. Holger.

        * Use std::vector internally for Pl_Buffer to
        avoid incompatibility with C++20. Thanks to Zoe Clifford. Fixes #1024.

2023-07-09  Jay Berkenbilt  <ejb@ql.org>

        * 11.5.0: release

        * This release consists entirely of changes made by M. Holger.
        Mostly this is changes to the private API, performance
        enhancements, code cleanup, and reformatting to 100 columns
        instead of 80. For qpdf development, we are starting to use
        JetBrains CLion, so a lot of the changes are moving us toward a
        cleaner development experience in that environment.

2023-06-15  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: when a the same page is copied multiple times, copy
        the annotations rather than having multiple pages share an
        annotation object. Thanks to M. Holger for the fix. Fixes #600.

2023-06-14  Jay Berkenbilt  <ejb@ql.org>

        * Add "FUTURE" build option for enabling experimental APIs. Do not
        package qpdf built with the FUTURE option as there are no binary
        compatibility or even source compatibility guarantees. The option
        is intended for developers who want to ensure that future
        potentially breaking changes are compatible with their code or
        provide feedback on upcoming changes. At present, the only feature
        enabled by FUTURE is a move constructor for QPDFObjectHandle.
        While this shouldn't break any code, it would change details about
        how many copies of a specific QPDFObjectHandle were in existence,
        so it could potentially break code that was relying on internal